--- a/scss/mediaqueries/media-mobile.scss
+++ b/scss/mediaqueries/media-mobile.scss
@@ -8,7 +8,7 @@
     body {
         
             header {
-                display: flex;
+                display: block;
                 justify-content: space-around;
                 flex-direction: column;               
                 justify-content: flex-start;
@@ -22,13 +22,16 @@
 
 
                         .logo {
-
+                            width: 50%;
                             margin: 0 auto;
                         }
 
                     }
 
-
+.navbar-toggler-icon{
+    display: block;
+    background-color: #ffffff;
+}
 
                 }
 
@@ -251,8 +254,7 @@ footer {
                     margin-right: 0;
 
                     .logo {
-                        width: 25%;
-                        background-color: cornflowerblue;
+                      width: 50%;
                     }
                 }
 
