--- a/scss/pages/_actividades.scss
+++ b/scss/pages/_actividades.scss
@@ -1,56 +1,37 @@
 body{
   background-color: $background-body;
-    main{
-        section{
-            mark{
-                background-color: #080801;
-                font-size: 2rem;
-                color: #ffffff;
-                margin-bottom: 5rem;
-            }
     
-            h1{
-                color: #040404;
-                font-size: 2.5rem;
-                font-weight: 900;         
-    
-    
-                .bienvenido {
-                    
-                                 font-family: "Seymour One", sans-serif;
-                    padding: 10px;
-                }
-            }
-    
-    
-    
-            h4{
-                color:#7119c8;
-            }
-    
-            p{              
-               border-radius: 10px;
-                        height: auto;
-                        font-size: 1.3rem;
-                        justify-content: center;
-            }
-    
-            .card{
-               
-                h3{
-                    color:#000000;
-                }
+ .seccion_principal{
+   
 
-                p{
-                    font-size: 1rem;
-                }
-            }
+    h1{       
+        font-size: 2.7rem;
+    }
+
+    h2{
+        font-weight: 500;
+    }
     
+
+        .seleccion{
+            font-weight: 700;
+            font-size: 2.3rem;
+            color: #061b24;
         }
-    
-    
-        }
-       
+   
+
+    mark{
+        font-size: 1.8rem;
+        background-color: #061b24;
+
+        color:#ffffff;
+    }
+
+    .descripcion{
+        font-weight: 300;
+    }
+
+ }      
 
 
 }
