--- a/scss/pages/_actividades.scss
+++ b/scss/pages/_actividades.scss
@@ -5,13 +5,21 @@ body{
    
 
     h1{       
-        font-size: 2.7rem;
+        font-size: 2.3rem;
+        font-weight: 900;
     }
 
+  .fs-4{
+  
+    font-style: italic;
+  }
+
     h2{
-        font-weight: 500;
+        font-weight: 400;
+        padding-top: 1rem;
     }
-    
+
+  
 
         .seleccion{
             font-weight: 700;
@@ -31,7 +39,20 @@ body{
         font-weight: 300;
     }
 
+
+    .btn-primary{
+        background-color: #198754;
+        border: #198754;
+    }
+
  }      
+
+
+article{
+    background-color:#198754;
+    color: #ffffff;
+    
+}
 
 
 }
